Added email to landing page.

--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
     <div class="text-content">
         <!-- Photo by Lauren Mancke on Unsplash -->
         <h1>Designs by Phillip</h1>
-        <h2>Website Coming Soon</h2>
+        <h3>Website Coming Soon</h3>
         <p>Thank you for your patience.</p>
+        <p>(email: Phillip@CurrenceOnline.com)</p>
     </div>
 </div>
 
